welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var fini : Boolean = false
^BDRBuggle:14: error: ';' expected but 'else' found.
  else {fini = true;}
  ^